--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
         <button>About</button>
       </nav>
     </header>
-    <div id="content"></div>
+    <div id="content">
+      <div class="menu">
+        <h1>Our Meals</h1>
+      </div>
+    </div>
   </body>
 </html>
